textcoments, arrows for graphics

--- a/machine_vision_alpha.ipynb
+++ b/machine_vision_alpha.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,9 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\serge\\Miniconda3\\lib\\site-packages\\tensorflow\\python\\framework\\op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n"
+     ]
+    }
+   ],
    "source": [
     "detector.setModelTypeAsRetinaNet()\n",
     "detector.setModelPath(path)\n",
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +73,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,24 +93,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'name': 'person', 'percentage_probability': 30.487626791000366, 'box_points': array([163, 789, 191, 838])}, {'name': 'person', 'percentage_probability': 29.303187131881714, 'box_points': array([698, 789, 724, 841])}, {'name': 'person', 'percentage_probability': 44.65055763721466, 'box_points': array([830, 791, 857, 843])}, {'name': 'person', 'percentage_probability': 27.550414204597473, 'box_points': array([841, 792, 875, 839])}, {'name': 'person', 'percentage_probability': 35.537728667259216, 'box_points': array([  0, 792,  33, 867])}, {'name': 'person', 'percentage_probability': 74.8305082321167, 'box_points': array([322, 796, 354, 870])}, {'name': 'person', 'percentage_probability': 70.75256109237671, 'box_points': array([507, 797, 541, 877])}, {'name': 'person', 'percentage_probability': 87.66123056411743, 'box_points': array([587, 788, 627, 880])}, {'name': 'person', 'percentage_probability': 46.969738602638245, 'box_points': array([629, 794, 652, 862])}, {'name': 'person', 'percentage_probability': 48.62793684005737, 'box_points': array([764, 787, 788, 860])}, {'name': 'person', 'percentage_probability': 38.055744767189026, 'box_points': array([854, 795, 879, 854])}, {'name': 'person', 'percentage_probability': 57.81937837600708, 'box_points': array([  9, 793,  48, 878])}, {'name': 'person', 'percentage_probability': 68.81699562072754, 'box_points': array([432, 791, 468, 873])}, {'name': 'person', 'percentage_probability': 31.168586015701294, 'box_points': array([727, 810, 750, 863])}, {'name': 'person', 'percentage_probability': 56.60828351974487, 'box_points': array([751, 790, 777, 862])}, {'name': 'person', 'percentage_probability': 42.724549770355225, 'box_points': array([789, 799, 814, 864])}, {'name': 'person', 'percentage_probability': 83.19092988967896, 'box_points': array([1210,  778, 1263,  918])}, {'name': 'person', 'percentage_probability': 76.46218538284302, 'box_points': array([113, 793, 148, 881])}, {'name': 'bicycle', 'percentage_probability': 26.488757133483887, 'box_points': array([388, 825, 434, 863])}, {'name': 'bicycle', 'percentage_probability': 25.48324465751648, 'box_points': array([400, 817, 457, 876])}, {'name': 'bicycle', 'percentage_probability': 35.891133546829224, 'box_points': array([431, 802, 464, 877])}, {'name': 'bicycle', 'percentage_probability': 50.355762243270874, 'box_points': array([438, 827, 466, 882])}, {'name': 'bicycle', 'percentage_probability': 41.52121543884277, 'box_points': array([508, 817, 539, 880])}, {'name': 'motorcycle', 'percentage_probability': 23.758962750434875, 'box_points': array([  0, 840,  37, 905])}, {'name': 'person', 'percentage_probability': 27.022898197174072, 'box_points': array([  4, 808,  48, 927])}, {'name': 'motorcycle', 'percentage_probability': 27.76487171649933, 'box_points': array([  0, 842,  41, 958])}, {'name': 'bicycle', 'percentage_probability': 55.35222291946411, 'box_points': array([  0, 863,  39, 958])}, {'name': 'person', 'percentage_probability': 94.13957595825195, 'box_points': array([884, 780, 943, 933])}]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'name': 'person',\n",
+       "  'percentage_probability': 30.487626791000366,\n",
+       "  'box_points': array([163, 789, 191, 838])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 29.303187131881714,\n",
+       "  'box_points': array([698, 789, 724, 841])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 44.65055763721466,\n",
+       "  'box_points': array([830, 791, 857, 843])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 27.550414204597473,\n",
+       "  'box_points': array([841, 792, 875, 839])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 35.537728667259216,\n",
+       "  'box_points': array([  0, 792,  33, 867])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 74.8305082321167,\n",
+       "  'box_points': array([322, 796, 354, 870])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 70.75256109237671,\n",
+       "  'box_points': array([507, 797, 541, 877])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 87.66123056411743,\n",
+       "  'box_points': array([587, 788, 627, 880])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 46.969738602638245,\n",
+       "  'box_points': array([629, 794, 652, 862])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 48.62793684005737,\n",
+       "  'box_points': array([764, 787, 788, 860])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 38.055744767189026,\n",
+       "  'box_points': array([854, 795, 879, 854])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 57.81937837600708,\n",
+       "  'box_points': array([  9, 793,  48, 878])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 68.81699562072754,\n",
+       "  'box_points': array([432, 791, 468, 873])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 31.168586015701294,\n",
+       "  'box_points': array([727, 810, 750, 863])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 56.60828351974487,\n",
+       "  'box_points': array([751, 790, 777, 862])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 42.724549770355225,\n",
+       "  'box_points': array([789, 799, 814, 864])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 83.19092988967896,\n",
+       "  'box_points': array([1210,  778, 1263,  918])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 76.46218538284302,\n",
+       "  'box_points': array([113, 793, 148, 881])},\n",
+       " {'name': 'bicycle',\n",
+       "  'percentage_probability': 26.488757133483887,\n",
+       "  'box_points': array([388, 825, 434, 863])},\n",
+       " {'name': 'bicycle',\n",
+       "  'percentage_probability': 25.48324465751648,\n",
+       "  'box_points': array([400, 817, 457, 876])},\n",
+       " {'name': 'bicycle',\n",
+       "  'percentage_probability': 35.891133546829224,\n",
+       "  'box_points': array([431, 802, 464, 877])},\n",
+       " {'name': 'bicycle',\n",
+       "  'percentage_probability': 50.355762243270874,\n",
+       "  'box_points': array([438, 827, 466, 882])},\n",
+       " {'name': 'bicycle',\n",
+       "  'percentage_probability': 41.52121543884277,\n",
+       "  'box_points': array([508, 817, 539, 880])},\n",
+       " {'name': 'motorcycle',\n",
+       "  'percentage_probability': 23.758962750434875,\n",
+       "  'box_points': array([  0, 840,  37, 905])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 27.022898197174072,\n",
+       "  'box_points': array([  4, 808,  48, 927])},\n",
+       " {'name': 'motorcycle',\n",
+       "  'percentage_probability': 27.76487171649933,\n",
+       "  'box_points': array([  0, 842,  41, 958])},\n",
+       " {'name': 'bicycle',\n",
+       "  'percentage_probability': 55.35222291946411,\n",
+       "  'box_points': array([  0, 863,  39, 958])},\n",
+       " {'name': 'person',\n",
+       "  'percentage_probability': 94.13957595825195,\n",
+       "  'box_points': array([884, 780, 943, 933])}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(list)"
+    "list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +206,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,6 +214,20 @@
    "source": [
     "Image(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
