validation_curve ended

--- a/machine_vision_alpha.ipynb
+++ b/machine_vision_alpha.ipynb
@@ -57,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Save result image? [Y/n] n\n",
+      "Save result image? [Y/n] y\n",
       "sensetivity persentage?> \n",
       "30\n"
      ]
@@ -87,190 +87,21 @@
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>box_points</th>\n",
-       "      <th>name</th>\n",
-       "      <th>percentage_probability</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[163, 789, 191, 838]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>30.487627</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[830, 791, 857, 843]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>44.650558</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[0, 792, 33, 867]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>35.537729</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[322, 796, 354, 870]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>74.830508</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[507, 797, 541, 877]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>70.752561</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>[587, 788, 627, 880]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>87.661231</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>[629, 794, 652, 862]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>46.969739</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>[764, 787, 788, 860]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>48.627937</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>[854, 795, 879, 854]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>38.055745</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>[9, 793, 48, 878]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>57.819378</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>[432, 791, 468, 873]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>68.816996</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>[727, 810, 750, 863]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>31.168586</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>[751, 790, 777, 862]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>56.608284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>[789, 799, 814, 864]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>42.724550</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>[1210, 778, 1263, 918]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>83.190930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>[113, 793, 148, 881]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>76.462185</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>[431, 802, 464, 877]</td>\n",
-       "      <td>bicycle</td>\n",
-       "      <td>35.891134</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>[438, 827, 466, 882]</td>\n",
-       "      <td>bicycle</td>\n",
-       "      <td>50.355762</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>[508, 817, 539, 880]</td>\n",
-       "      <td>bicycle</td>\n",
-       "      <td>41.521215</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>[0, 863, 39, 958]</td>\n",
-       "      <td>bicycle</td>\n",
-       "      <td>55.352223</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>[884, 780, 943, 933]</td>\n",
-       "      <td>person</td>\n",
-       "      <td>94.139576</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                box_points     name  percentage_probability\n",
-       "0     [163, 789, 191, 838]   person               30.487627\n",
-       "1     [830, 791, 857, 843]   person               44.650558\n",
-       "2        [0, 792, 33, 867]   person               35.537729\n",
-       "3     [322, 796, 354, 870]   person               74.830508\n",
-       "4     [507, 797, 541, 877]   person               70.752561\n",
-       "5     [587, 788, 627, 880]   person               87.661231\n",
-       "6     [629, 794, 652, 862]   person               46.969739\n",
-       "7     [764, 787, 788, 860]   person               48.627937\n",
-       "8     [854, 795, 879, 854]   person               38.055745\n",
-       "9        [9, 793, 48, 878]   person               57.819378\n",
-       "10    [432, 791, 468, 873]   person               68.816996\n",
-       "11    [727, 810, 750, 863]   person               31.168586\n",
-       "12    [751, 790, 777, 862]   person               56.608284\n",
-       "13    [789, 799, 814, 864]   person               42.724550\n",
-       "14  [1210, 778, 1263, 918]   person               83.190930\n",
-       "15    [113, 793, 148, 881]   person               76.462185\n",
-       "16    [431, 802, 464, 877]  bicycle               35.891134\n",
-       "17    [438, 827, 466, 882]  bicycle               50.355762\n",
-       "18    [508, 817, 539, 880]  bicycle               41.521215\n",
-       "19       [0, 863, 39, 958]  bicycle               55.352223\n",
-       "20    [884, 780, 943, 933]   person               94.139576"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "Ensure you specified correct input image, input type, output type and/or output image path ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\Miniconda3\\lib\\site-packages\\imageai\\Detection\\__init__.py\u001b[0m in \u001b[0;36mdetectCustomObjectsFromImage\u001b[1;34m(self, custom_objects, input_image, output_image_path, input_type, output_type, extract_detected_objects, minimum_percentage_probability, display_percentage_probability, display_object_name)\u001b[0m\n\u001b[0;32m    687\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 688\u001b[1;33m                         \u001b[0mobjects_dir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0moutput_image_path\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"-objects\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    689\u001b[0m                         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mextract_detected_objects\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mTrue\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0moutput_type\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"file\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: '_io.TextIOWrapper' and 'str'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-5dd1798f5fee>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmachine_vision_immage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmachine_vision_immage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msavenewfile\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msave_result\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msensitivity\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msensetivity\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnewfilepath\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msave_file_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\Python\\machine_vision_immage.py\u001b[0m in \u001b[0;36mmachine_vision_immage\u001b[1;34m(filename, savenewfile, sensitivity, newfilepath)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mdetector\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloadModel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0msavenewfile\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdetector\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetectCustomObjectsFromImage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_image\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutput_image_path\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnewfilepath\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mminimum_percentage_probability\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msensitivity\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdisplay_object_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdisplay_percentage_probability\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdetector\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetectCustomObjectsFromImage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_image\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mminimum_percentage_probability\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msensitivity\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdisplay_object_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdisplay_percentage_probability\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Miniconda3\\lib\\site-packages\\imageai\\Detection\\__init__.py\u001b[0m in \u001b[0;36mdetectCustomObjectsFromImage\u001b[1;34m(self, custom_objects, input_image, output_image_path, input_type, output_type, extract_detected_objects, minimum_percentage_probability, display_percentage_probability, display_object_name)\u001b[0m\n\u001b[0;32m    858\u001b[0m             \u001b[1;32mexcept\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    859\u001b[0m                 raise ValueError(\n\u001b[1;32m--> 860\u001b[1;33m                     \"Ensure you specified correct input image, input type, output type and/or output image path \")\n\u001b[0m\u001b[0;32m    861\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    862\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Ensure you specified correct input image, input type, output type and/or output image path "
+     ]
     }
    ],
    "source": [
@@ -279,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
