naive bayes ended

--- a/5/5_naive_bayesian_classification_end.ipynb
+++ b/5/5_naive_bayesian_classification_end.ipynb
@@ -267,16 +267,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import predict_func"
+    "# import predict_func\n",
+    "# predict_func.predict_category('sending a payload to the ISS')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "predict_func?"
+    "def predict_category(s, train=train, model= model):\n",
+    "    pred = model.predict([s])\n",
+    "    return train.target_names[pred[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sci.space'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_category('sending a payload to the ISS')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'soc.religion.christian'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_category('discussing islam vs atheism')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'comp.graphics'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_category('determining the screen resolution')"
    ]
   },
   {
