weather app request added

--- a/weather app.ipynb
+++ b/weather app.ipynb
@@ -21,10 +21,13 @@
     "    \"\"\"get weather for city via api openweathermap.org\"\"\"\n",
     "    #file token holding token string for api\n",
     "    file = open('token','r')\n",
-    "    token = file.read()\n",
+    "    weather_key = file.read()\n",
     "    file.close()\n",
-    "    print('entred text  is> ',city)\n",
-    "    print('token> ',token)"
+    "    \n",
+    "    url = 'https://api.openweathermap.org/data/2.5/weather'\n",
+    "    params = {'APPID': weather_key, 'q': city, 'units': 'Metric'}\n",
+    "    response = requests.get(url, params=params)\n",
+    "    weather = response.json()"
    ]
   },
   {
@@ -99,16 +102,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "entred text  is>  gfgfg\n",
-      "token>  3b0b395acfbd1073bb48e4d5cd0ef122\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "root.mainloop()"
    ]
