--- a/keras_training/2_keras_simple_example.ipynb
+++ b/keras_training/2_keras_simple_example.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.datasets import mnist\n",
     "import numpy as np\n",
@@ -15,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +41,7 @@
        "(60000, 28, 28)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +61,7 @@
        "60000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +81,7 @@
        "array([5, 0, 4, ..., 5, 6, 8], dtype=uint8)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +101,7 @@
        "(10000, 28, 28)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +121,7 @@
        "10000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +141,7 @@
        "array([7, 2, 1, ..., 4, 5, 6], dtype=uint8)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -220,44 +228,105 @@
       "Instructions for updating:\n",
       "Use tf.cast instead.\n",
       "Epoch 1/5\n",
-      "60000/60000 [==============================] - 3s 56us/step - loss: 0.2503 - acc: 0.9260\n",
+      "60000/60000 [==============================] - 5s 77us/step - loss: 0.2598 - acc: 0.9244\n",
       "Epoch 2/5\n",
-      "60000/60000 [==============================] - 3s 49us/step - loss: 0.1025 - acc: 0.9694\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.1053 - acc: 0.9688\n",
       "Epoch 3/5\n",
-      "60000/60000 [==============================] - 3s 49us/step - loss: 0.0686 - acc: 0.9793\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0682 - acc: 0.9802\n",
       "Epoch 4/5\n",
-      "60000/60000 [==============================] - 3s 50us/step - loss: 0.0488 - acc: 0.9854\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0491 - acc: 0.9854\n",
       "Epoch 5/5\n",
-      "60000/60000 [==============================] - 3s 50us/step - loss: 0.0367 - acc: 0.9886\n"
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0379 - acc: 0.9886\n",
+      "Epoch 1/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0285 - acc: 0.9911\n",
+      "Epoch 2/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0217 - acc: 0.9936\n",
+      "Epoch 3/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0167 - acc: 0.9951\n",
+      "Epoch 4/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0127 - acc: 0.9964\n",
+      "Epoch 5/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0101 - acc: 0.9973\n",
+      "Epoch 1/5\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 0.0080 - acc: 0.9980\n",
+      "Epoch 2/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0065 - acc: 0.9982\n",
+      "Epoch 3/5\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 0.0049 - acc: 0.9986\n",
+      "Epoch 4/5\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 0.0039 - acc: 0.9990\n",
+      "Epoch 5/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0035 - acc: 0.9991\n",
+      "Epoch 1/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0026 - acc: 0.9993\n",
+      "Epoch 2/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0020 - acc: 0.9995\n",
+      "Epoch 3/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0018 - acc: 0.9995\n",
+      "Epoch 4/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0014 - acc: 0.9997\n",
+      "Epoch 5/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0012 - acc: 0.9998\n",
+      "Epoch 1/5\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 9.8530e-04 - acc: 0.9998\n",
+      "Epoch 2/5\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 9.8292e-04 - acc: 0.9998\n",
+      "Epoch 3/5\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 8.9296e-04 - acc: 0.9998\n",
+      "Epoch 4/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 8.1663e-04 - acc: 0.9999\n",
+      "Epoch 5/5\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 7.1143e-04 - acc: 0.9999\n",
+      "Epoch 1/5\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 5.3074e-04 - acc: 0.9999\n",
+      "Epoch 2/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 4.7328e-04 - acc: 1.0000\n",
+      "Epoch 3/5\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 5.9594e-04 - acc: 0.9999\n",
+      "Epoch 4/5\n",
+      "60000/60000 [==============================] - 2s 32us/step - loss: 4.5807e-04 - acc: 0.9999\n",
+      "Epoch 5/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 4.2554e-04 - acc: 1.0000\n",
+      "Epoch 1/5\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 4.9559e-04 - acc: 0.9999\n",
+      "Epoch 2/5\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 3.3676e-04 - acc: 1.0000\n",
+      "Epoch 3/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 3.4280e-04 - acc: 1.0000\n",
+      "Epoch 4/5\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 3.1014e-04 - acc: 1.0000\n",
+      "Epoch 5/5\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 2.9333e-04 - acc: 1.0000\n",
+      "Epoch 1/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 3.1312e-04 - acc: 1.0000\n",
+      "Epoch 2/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 2.8996e-04 - acc: 1.0000\n",
+      "Epoch 3/5\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 2.7932e-04 - acc: 1.0000\n",
+      "Epoch 4/5\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 2.7421e-04 - acc: 1.0000\n",
+      "Epoch 5/5\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 2.7092e-04 - acc: 1.0000\n",
+      "9.16 s ± 78.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x2d5bf0f86a0>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#teaching network\n",
-    "network.fit(train_images,train_labels,epochs=5,batch_size=128)"
+    "%timeit network.fit(train_images,train_labels,epochs=5,batch_size=128)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 0s 25us/step\n",
-      "test_acc> 0.9779\n"
+      "10000/10000 [==============================] - 0s 35us/step\n",
+      "test_acc> 0.9837\n"
      ]
     }
    ],
