reutars souce files with labels added

--- a/keras_training/3_reuters_end.ipynb
+++ b/keras_training/3_reuters_end.ipynb
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,51 @@
       "Epoch 8/30\n",
       "7982/7982 [==============================] - 1s 109us/step - loss: 0.3748 - acc: 0.9204 - val_loss: 0.9852 - val_acc: 0.8070\n",
       "Epoch 9/30\n",
-      "7168/7982 [=========================>....] - ETA: 0s - loss: 0.2994 - acc: 0.9361"
+      "7982/7982 [==============================] - 1s 114us/step - loss: 0.3034 - acc: 0.9351 - val_loss: 0.9683 - val_acc: 0.8150\n",
+      "Epoch 10/30\n",
+      "7982/7982 [==============================] - 1s 114us/step - loss: 0.2655 - acc: 0.9396 - val_loss: 0.9883 - val_acc: 0.8100\n",
+      "Epoch 11/30\n",
+      "7982/7982 [==============================] - 1s 115us/step - loss: 0.2196 - acc: 0.9469 - val_loss: 1.0100 - val_acc: 0.8150\n",
+      "Epoch 12/30\n",
+      "7982/7982 [==============================] - 1s 115us/step - loss: 0.1968 - acc: 0.9508 - val_loss: 1.0539 - val_acc: 0.7940\n",
+      "Epoch 13/30\n",
+      "7982/7982 [==============================] - 1s 114us/step - loss: 0.1795 - acc: 0.9516 - val_loss: 1.0571 - val_acc: 0.8050\n",
+      "Epoch 14/30\n",
+      "7982/7982 [==============================] - 1s 114us/step - loss: 0.1643 - acc: 0.9538 - val_loss: 1.1109 - val_acc: 0.8000\n",
+      "Epoch 15/30\n",
+      "7982/7982 [==============================] - 1s 116us/step - loss: 0.1538 - acc: 0.9543 - val_loss: 1.1681 - val_acc: 0.7830\n",
+      "Epoch 16/30\n",
+      "7982/7982 [==============================] - 1s 115us/step - loss: 0.1411 - acc: 0.9573 - val_loss: 1.3219 - val_acc: 0.7610\n",
+      "Epoch 17/30\n",
+      "7982/7982 [==============================] - 1s 111us/step - loss: 0.1413 - acc: 0.9569 - val_loss: 1.0701 - val_acc: 0.8060\n",
+      "Epoch 18/30\n",
+      "7982/7982 [==============================] - 1s 111us/step - loss: 0.1307 - acc: 0.9579 - val_loss: 1.1315 - val_acc: 0.7930\n",
+      "Epoch 19/30\n",
+      "7982/7982 [==============================] - 1s 112us/step - loss: 0.1307 - acc: 0.9590 - val_loss: 1.1214 - val_acc: 0.7930\n",
+      "Epoch 20/30\n",
+      "7982/7982 [==============================] - 1s 110us/step - loss: 0.1212 - acc: 0.9575 - val_loss: 1.1725 - val_acc: 0.7960\n",
+      "Epoch 21/30\n",
+      "7982/7982 [==============================] - 1s 112us/step - loss: 0.1191 - acc: 0.9583 - val_loss: 1.1643 - val_acc: 0.8000\n",
+      "Epoch 22/30\n",
+      "7982/7982 [==============================] - 1s 115us/step - loss: 0.1174 - acc: 0.9577 - val_loss: 1.1356 - val_acc: 0.8040\n",
+      "Epoch 23/30\n",
+      "7982/7982 [==============================] - 1s 111us/step - loss: 0.1172 - acc: 0.9579 - val_loss: 1.2061 - val_acc: 0.7880\n",
+      "Epoch 24/30\n",
+      "7982/7982 [==============================] - 1s 111us/step - loss: 0.1141 - acc: 0.9583 - val_loss: 1.1816 - val_acc: 0.7910\n",
+      "Epoch 25/30\n",
+      "7982/7982 [==============================] - 1s 113us/step - loss: 0.1098 - acc: 0.9585 - val_loss: 1.2847 - val_acc: 0.7850\n",
+      "Epoch 26/30\n",
+      "7982/7982 [==============================] - 1s 110us/step - loss: 0.1056 - acc: 0.9605 - val_loss: 1.1478 - val_acc: 0.7960\n",
+      "Epoch 27/30\n",
+      "7982/7982 [==============================] - 1s 112us/step - loss: 0.0991 - acc: 0.9609 - val_loss: 1.2594 - val_acc: 0.7940\n",
+      "Epoch 28/30\n",
+      "7982/7982 [==============================] - 1s 113us/step - loss: 0.1071 - acc: 0.9574 - val_loss: 1.2116 - val_acc: 0.7920\n",
+      "Epoch 29/30\n",
+      "7982/7982 [==============================] - 1s 112us/step - loss: 0.1041 - acc: 0.9582 - val_loss: 1.3299 - val_acc: 0.7750\n",
+      "Epoch 30/30\n",
+      "7982/7982 [==============================] - 1s 109us/step - loss: 0.1000 - acc: 0.9617 - val_loss: 1.2342 - val_acc: 0.7850\n",
+      "2246/2246 [==============================] - 0s 138us/step\n",
+      "[1.4428804211603778, 0.780053428317008]\n"
      ]
     }
    ],
@@ -1079,10 +1123,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "reuters?"
+   ]
   }
  ],
  "metadata": {
